--- a/loading-behavior.html
+++ b/loading-behavior.html
@@ -1,34 +1,14 @@
 <link rel="import" href="../polymer/polymer.html">
 
-<!--
-`loading-behavior`
-
-
-@demo demo/index.html 
--->
-
-<dom-module id="loading-behavior">
-  <template>
-    <style>
-      :host {
-        display: block;
-      }
-    </style>
-    <h2>Hello [[prop1]]</h2>
-  </template>
-
-  <script>
-    Polymer({
-
-      is: 'loading-behavior',
+<script>
+    LoadingBehavior = {
 
       properties: {
-        prop1: {
-          type: String,
-          value: 'loading-behavior',
-        },
-      },
-
-    });
-  </script>
-</dom-module>
+        loading: {
+          type: Boolean,
+          value: false,
+          notify: true,
+        }
+      }
+    };
+</script>
