Default loading property to true

--- a/loading-behavior.html
+++ b/loading-behavior.html
@@ -6,7 +6,7 @@
       properties: {
         loading: {
           type: Boolean,
-          value: false,
+          value: true,
           notify: true,
         }
       }
