--- a/loading-behavior.html
+++ b/loading-behavior.html
@@ -1,6 +1,11 @@
 <link rel="import" href="../polymer/polymer.html">
 
 <script>
+/**
+ * Behavior that contains a notifiable 'loading' property
+ *
+ * @polymerBehavior LoadingBehavior
+ */
     LoadingBehavior = {
 
       properties: {
